group3_frontend/src/components/homePage/Homepage.css
.HomepageContainer{
    width:100%;
    height:100%;
    position: relative;
    top:0px;
    padding-left:0px;


}

.WeatherDiv{
        display: inline-block;
        vertical-align:top;
        width: 63%;
        min-width: 300px;
        background-color: rgba(255,255,255, 1);
        height:340px;
    left:400px;
    margin-bottom:100px;
    margin-top:-5px;
    padding-top:10px;

}

.UserDataHomepage{
        display: inline-block;

        vertical-align:top;

        margin-top:-5px;
        margin-bottom:20px;
        margin-left:-10px;

   background-color: rgba(255,255,255, 1);
    text-align: center;
    left: -100px;
    margin-right:15px;
    padding-top:10px;

    padding-left:20px;
    height:340px;
    width:350px;
    -webkit-animation: bounce-in-top 1.1s both;
    animation: bounce-in-top 1.1s both;
  
    
}

.UserDataText{
    width:100%;
    text-align: left;
    padding-left:40px;
    padding-right:40px;
}

.GraphContainer{
        padding: 10px;
        margin-bottom:10px;
        margin-left:40px;
        padding-bottom:20px;
        padding-top:20px;
        width:90%;
        background-color: rgb(240, 240, 240);




}

.ProjectGraphContainer{
        display: inline-block;

        vertical-align:top;

        margin-top: -85px;
        margin-bottom:20px;
        margin-left:-10px;

   background-color: rgba(255,255,255, 1);
    text-align: center;
    left: -100px;
    margin-right:15px;
    padding-top:10px;

    padding-left:20px;
    height:400px;
    width:350px;
}




.TaskGraphUpperContainer{
        display: inline-block;
        margin-top: -85px;

        background-color: rgba(255,255,255, 1);
        margin-right:5px;
        right: 50px;
        text-align: center;

    height:400px;
    width: 63%;
    overflow-y: auto;
    overflow-x:hidden;

    
    }
    
h1{
        text-align:center;
        font-family: "Dense";
        src: local("../fonts/dense/Dense-Regular.woff2") format("woff2"),
            local("../fonts/dense/Dense-Regular.woff") format("woff"),
            local("../fonts/dense/Dense-Regular.ttf") format("truetype");
        font-weight: normal;
        font-style: normal;
}

h2{
        font-family: "Dense";
        src: local("../fonts/dense/Dense-Regular.woff2") format("woff2"),
            local("../fonts/dense/Dense-Regular.woff") format("woff"),
            local("../fonts/dense/Dense-Regular.ttf") format("truetype");
        font-weight: lighter;
        font-style: normal;
        font-size:25px;
}



  

  .tdGraphStyle{
        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 12px;
         width:80%;
         padding-left:0px;
         text-align:left;
         padding-left:10px;
         

  }

  .tdGraphStyleEnd{
        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 12px;
         text-align:left;
  }

  .tdGraphStyleRight{
        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 12px;
         text-align:right;
  }

  .tdGraphStyleLeft{
        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 12px;
         text-align:left;
  }

  .line{
          width:100%;
  }

  .CircleGraph{
          margin-top:10px;
          width:300px;
          margin-bottom:-200px;
          text-align: center;
          margin-left: 14px;


  }

  .ProgBarCircleContainer{
          width:100%;
          
  }

  .ProjectGraphTable{
          width:100%;
          
  }

.tableUsernameText{
        text-align: center;
        margin-left: 50px;
        
}



  .tdUserLeft{
          text-align: right;
          font-size: 13px;
          font-weight: bold;
          
  }
  .tdUserRight{
        text-align: left;
        padding-left:20px;
        position: relative;
        font-size: 13px;

}

  /* ----------------------------------------------
 * Generated by Animista on 2018-5-28 21:17:44
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation bounce-in-top
 * ----------------------------------------
 */
 @-webkit-keyframes bounce-in-top {
        0% {
          -webkit-transform: translateY(-500px);
                  transform: translateY(-500px);
          -webkit-animation-timing-function: ease-in;
                  animation-timing-function: ease-in;
          opacity: 0;
        }
        38% {
          -webkit-transform: translateY(0);
                  transform: translateY(0);
          -webkit-animation-timing-function: ease-out;
                  animation-timing-function: ease-out;
          opacity: 1;
        }
        55% {
          -webkit-transform: translateY(-65px);
                  transform: translateY(-65px);
          -webkit-animation-timing-function: ease-in;
                  animation-timing-function: ease-in;
        }
        72% {
          -webkit-transform: translateY(0);
                  transform: translateY(0);
          -webkit-animation-timing-function: ease-out;
                  animation-timing-function: ease-out;
        }
        81% {
          -webkit-transform: translateY(-28px);
                  transform: translateY(-28px);
          -webkit-animation-timing-function: ease-in;
        }
        90% {
          -webkit-transform: translateY(0);
                  transform: translateY(0);
          -webkit-animation-timing-function: ease-out;
                  animation-timing-function: ease-out;
        }
        95% {
          -webkit-transform: translateY(-8px);
                  transform: translateY(-8px);
          -webkit-animation-timing-function: ease-in;
                  animation-timing-function: ease-in;
        }
        100% {
          -webkit-transform: translateY(0);
                  transform: translateY(0);
          -webkit-animation-timing-function: ease-out;
                  animation-timing-function: ease-out;
        }
      }
      @keyframes bounce-in-top {
        0% {
          -webkit-transform: translateY(-500px);
                  transform: translateY(-500px);
          -webkit-animation-timing-function: ease-in;
                  animation-timing-function: ease-in;
          opacity: 0;
        }
        38% {
          -webkit-transform: translateY(0);
                  transform: translateY(0);
          -webkit-animation-timing-function: ease-out;
                  animation-timing-function: ease-out;
          opacity: 1;
        }
        55% {
          -webkit-transform: translateY(-65px);
                  transform: translateY(-65px);
          -webkit-animation-timing-function: ease-in;
                  animation-timing-function: ease-in;
        }
        72% {
          -webkit-transform: translateY(0);
                  transform: translateY(0);
          -webkit-animation-timing-function: ease-out;
                  animation-timing-function: ease-out;
        }
        81% {
          -webkit-transform: translateY(-28px);
                  transform: translateY(-28px);
          -webkit-animation-timing-function: ease-in;
        }
        90% {
          -webkit-transform: translateY(0);
                  transform: translateY(0);
          -webkit-animation-timing-function: ease-out;
                  animation-timing-function: ease-out;
        }
        95% {
          -webkit-transform: translateY(-8px);
                  transform: translateY(-8px);
          -webkit-animation-timing-function: ease-in;
                  animation-timing-function: ease-in;
        }
        100% {
          -webkit-transform: translateY(0);
                  transform: translateY(0);
          -webkit-animation-timing-function: ease-out;
                  animation-timing-function: ease-out;
        }
      }
  

